--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,85 @@
   }
 }
 /*-----------------------finish styles for loading........................*/
+
+/*NAVBAR*/
+.e{
+margin-right: 45rem;
+font-size: 35px;
+padding-left: 1rem;
+
+}
+
+.login{
+  padding-left: 1rem;
+  margin-right: 1rem;
+}
+
+.purchases{
+  padding-left: 1rem;
+  margin-right: 1rem;
+}
+
+.cart{
+  padding-left: 1rem;
+  margin-right: 1rem;
+}
+
+/*CATEGORY*/
+.cat{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+/*Carrito de checkout*/
+.check{
+  margin-right: 0.5rem;
+}
+
+/*CARDS*/
+.card-header{
+ padding: 25px !important;
+ border: none !important;
+}
+
+.card-img{
+  width: 100%;
+  height: 200px;
+  -o-object-fit: contain;
+  object-fit: contain;
+  transition: all 0.5s ease;
+}
+
+.card-img:hover{
+  transform: scale(1.1);
+  background: transparent;
+  transition: all 0.5s ease;
+}
+
+.card-body .card-title{
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+}
+/*BOTON*/
+/*
+.btn.btn-primary{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  
+}
+*/
+
+/*
+.btn.btn.btn-primary{
+  width: 10%;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  color: #161616;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0, 0.75);
+  transition: all 0.5s ease;
+}
+*/
+
